--- a/oop.html
+++ b/oop.html
@@ -51,6 +51,7 @@
             
             console.log(a.speach());
             console.log(g.speach());
+            console.log("-----------------------------------------------");
             console.log(s.speach());
 
             a.speak();
